integ-tests/tests/snapshots/parser__table_9_invalid.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[duplicate-key]: 
  ┌─ table_9_invalid:6:14
  │
3 │ apple.taste.sweet = true
  │       ----- first key instance
  ·
6 │ [fruit.apple.taste]  # INVALID
  │              ^^^^^ duplicate key
